--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.10",
+    "@clerk/themes": "^2.1.15",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
