--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.10",
     "@clerk/themes": "^2.1.15",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "svix": "^1.29.0"
   },
   "devDependencies": {
     "@types/node": "^20",
